@@ -1,3 +1,9 @@
+2007-08-09  Michal Nazarewicz  <mina86/AT/mina86.com>
+
+	* Makefile: + fixed doinst.sh
+	+ fixed EUID variable
+	+ changed ${...} with $(...) -- better backwarde compatiblity
+
 2007-08-07  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	* genpass.sh: + accepts one argument -- password length
